# katana-ai

./: .anchor  .coverage  .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  AUDIT_NLP.md  BENCHMARK_NLP.md  CONTRIBUTING.md  DEBUGGING_GUIDE.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  Dockerfile.bot  GENESIS_PLAN.md  INSTRUCTIONS.md  Makefile  My_workflow_3.json  N8N_WORKFLOW_README.md  POSTMORTEM_TST-001.md  README.md  REFACTORING_PLAN.md  RELEASE_CRITERIA.md  TESTING.md  TODO.md  TROUBLESHOOTING.md  ai_keys.json.example  api_server.py  apply_workflow_changes.py  benchmark.py  bot.py  bot_output.txt  build_and_deploy_workflow.py  check_env.py  check_files.py  clean_workflow.json  cleanup.sh  command_graph.json  command_graph.py  (+103 more)
.streamlit/: config.toml
KatanaCLI.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
alg911.catana-ai/: .gitignore  README.md  __init__.py  agent_loop.py  app.py  cli.py  cli_integration.py  cognitive_dissonance_queue.json  command_handler.py  diagnostic_log.yaml  katana.commands.json  katana.history.json  katana.py  katana_agent.py  katana_key_manager.py  katana_mcp.py  katana_memory.json  katana_ui_server.py  mock_backend_api.py  n8n_webhook_handler.sh  rclone.conf  requirements.txt  schemas.py  shared_config.py  status_logger.py  sync_status.json  sync_to_cloud.sh  tasklist.md  test_cli_integration.py  test_command_logic.py  test_dao_core.py  test_dialog_flow.py  test_e2e_api_cli_telegram.py  test_file_ops.py  test_katana_cli.py  test_katana_ui_server.py  test_log_rotation.py  test_memory_commands.py  test_mock_backend_api.py  test_trader_api.py  (+2 more)
analysis_results/: State_of_the_Noosphere_Q3_2025.md  concept_graph.gml  concepts.json  gap_analysis.json  generated_initiatives.json  temporal_fabric.gml
api/: logger.py  main.py  schemas.py  security.py  test_api.py
app/: api.py  main.py
bot/: __init__.py  _test_bot.py  autosuggest.py  bot_instance.py  bot_output.txt  chat_history.py  database.py  dialog_graph.py  katana_agent_bridge.py  katana_bot.py  katana_state.py  llm_router.py  logging_setup.py  main.py  nlp_service.py  requirements.in  requirements.txt  test_autosuggest.py  test_bot.py  test_integration.py  test_katana_state.py  test_nlp_service.py  test_prometheus_protocol.py  test_temporal_protocol.py  tts_service.py
chat_history/: 12345_history.json
cli/: katana_cli.py
cmd/: connect.go  disconnect.go  root.go
config/: loader.py  settings.yaml
core/: self_heal.py  sync_engine.py
daemons/: README.md
dev_utils/: parse_test_logs.py
docs/: CHRONOS_TDD.md  DEPLOYMENT.md  GAIA_MANIFESTO.md  MORPHEUS_TDD.md  ORACLE_TDD.md  __init__.py  katana_state_architecture.md  logging.md  metrics_dashboard.md  mock_map.md  nlp_modules_integration.md  project_inventory_report.md  prometheus_schema.json  quickstart_trader.md  self_heal.md  supabase_schema.json  telemetry_analyst_guide.md
healthcheck_reports/: diagnostic_log.yaml  health_report.json
hydra_observer/: README.md  analysis.py  main.py  observer.py  probes.py  system_state.py  watchers.py
interface/: cli.py
katana/: .gitignore  README.md  __init__.py  api.py  auto_healer.py  background_tasks.py  bot.py  cli.py  command_handler.py  config.py  decorators.py  healer_server.py  katana_agent.py  knowledge_base.py  logger.py  logging_config.py  message_dispatcher.py  monitoring.py  nlp_mapper.py  oracle.py  orchestrator.py  orchestrator_agent.py  post_task_verifier.py  proportions.py  reflex_map.yml  reporter.py  requirements.txt  secrets.py  self_check.py  self_evolve.py  supabase_client.py  trader_agent.py  version.py
katana-ai/: .gitignore  Dockerfile  README.md  api_server.py  cli.py  requirements.txt
katana-cli/: README.md  __init__.py  main.py  pyproject.toml
katana-cli/core/: kubernetes.py  runner.py  system.py
katana-dashboard-ui/: README.md  package-lock.json  package.json
katana-secrets-ui/: tailwind.config.js
katana_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
katana_api/: api.py  exceptions.py  main.py  schemas.py  security.py
katana_cli/: cli.py
katana_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
katana_core/: agent.py  data_fusion.py  katana.py  sync_status.json
katana_game_agent/: game_agent.py
katana_integrations/: __init__.py  github_service.py  gmail_service.py
katana_memory/: memory_api.py
katana_secrets_harvester/: README.md  __init__.py  harvester.py  icloud_sync.py
katana_single_app/: __init__.py  _test_bot.py  bot.py  core.py  main.py  nlp_mapper.py  requirements.txt  test_nlp_service.py
katana_terminal/: __init__.py  agent.py  cli.py  executor.py  utils.py
legacy_ui/: package-lock.json  package.json
logs/: decisions.json  test_write.txt  trader_data.json
monitoring/: docker-compose.yml  katana-hydra-observer.service  log_consumer.py  log_producer.py
monitoring_ui/: app.py
neurovault/: Dockerfile  README.md  api_server.py  create_checkpoint.py  init_db.py  requirements.txt  run_ingestion.py  test_graph_db.py
nlp/: __init__.py  dialogue_manager.py  intent_classifier.py  llm_handler.py  main.py  tool_registry.py
nlp_providers/: __init__.py  (+5 more)
(+839 files in other folders)
