[project]
name = "katana-ai"
version = "0.1.0"
description = "The Katana AI Monorepo"
authors = [
    {name = "The Katana AI Team"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "aiohttp (>=3.12.15,<4.0.0)",
    "pyicloud (>=2.0.1,<3.0.0)",
    "gkeepapi (>=0.16.0,<0.17.0)",
    "python-telegram-bot (>=22.3,<23.0)",
    "openai (>=1.99.9,<2.0.0)",
    "pygithub (>=2.7.0,<3.0.0)",
    "google-api-python-client (>=2.178.0,<3.0.0)",
    "google-auth-oauthlib (>=1.2.2,<2.0.0)",
    "google-cloud-secret-manager (>=2.24.0,<3.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "httpx (>=0.28.1,<0.29.0)"
]


[tool.poetry]
packages = [
    { include = "katana" },
    { include = "katana_core" },
    { include = "katana_integrations" },
    { include = "katana_secrets_harvester" },
    { include = "alg911" },
    { include = "bot" },
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^1.1.0"
freezegun = "^1.5.5"
