[project]
name = "KatanaBot"
version = "0.1.0"
description = "A Telegram bot for cryptocurrency trading and monitoring."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
  {name = "Your Name", email = "you@example.com"}
]
dependencies = [
  "annotated-types==0.7.0",
  "anyio==4.9.0",
  "APScheduler==3.11.0",
  "bandit==1.8.5",
  "black==25.1.0",
  "certifi==2025.6.15",
  "cfgv==3.4.0",
  "charset-normalizer==3.4.2",
  "click==8.2.1",
  "coverage==7.9.1",
  "distlib==0.3.9",
  "fastapi==0.115.14",
  "filelock==3.18.0",
  "flake8==7.3.0",
  "h11==0.16.0",
  "httpcore==1.0.9",
  "httptools==0.6.4",
  "httpx==0.28.1",
  "identify==2.6.12",
  "idna==3.10",
  "iniconfig==2.1.0",
  "markdown-it-py==3.0.0",
  "mccabe==0.7.0",
  "mdurl==0.1.2",
  "mypy_extensions==1.1.0",
  "nodeenv==1.9.1",
  "packaging==25.0",
  "pathspec==0.12.1",
  "pbr==6.1.1",
  "platformdirs==4.3.8",
  "pluggy==1.6.0",
  "pycodestyle==2.14.0",
  "pydantic==2.11.7",
  "pydantic_core==2.33.2",
  "pyflakes==3.4.0",
  "Pygments==2.19.2",
  "pytest==8.4.1",
  "pytest-cov==6.2.1",
  "python-dotenv==1.1.1",
  "python-telegram-bot==22.1",
  "PyYAML==6.0.2",
  "requests==2.32.4",
  "rich==14.0.0",
  "ruff==0.12.1",
  "setuptools==80.9.0", # Also in build-system.requires, ensure versions are compatible or manage appropriately
  "sniffio==1.3.1",
  "starlette==0.46.2",
  "stevedore==5.4.1",
  "typing-inspection==0.4.1",
  "typing_extensions==4.14.0",
  "tzlocal==5.3.1",
  "urllib3==2.5.0",
  "uvicorn==0.34.3", # For uvicorn[standard], ensure extras are handled if necessary or list specific sub-dependencies
  "uvloop==0.21.0",
  "virtualenv==20.31.2",
  "watchfiles==1.1.0",
  "websockets==15.0.1"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."] # Adjust if your package is in a subdirectory like src

# Example for ruff configuration (can be expanded)
[tool.ruff]
line-length = 127
select = ["E", "F", "W", "I", "N", "UP", "ANN", "ASYNC", "B", "C4", "DTZ", "T20", "EXE", "ISC", "ICN", "G", "INP", "PIE", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SIM", "TID", "TCH", "ARG", "PTH", "ERA", "PD", "PGH", "PLC", "PLE", "PLR", "PLW", "TRY", "FLY", "NPY", "PERF", "FURB", "LOG", "RUF"]
ignore = ["ANN101", "ANN102"] # Example: ignore missing type hints for self/cls

[tool.black]
line-length = 127

[tool.bandit]
skips = ["B101"] # Example: skip assert_used check, similar to .pre-commit-config.yaml
targets = ["katana", "main.py", "tests"] # Specify targets for bandit

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=katana --cov-report=term-missing" # Example options
testpaths = [
    "tests",
]
