[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "google-labs-jules[bot]",email = "161369871+google-labs-jules[bot]@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytelegrambotapi (>=4.29.1,<5.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "fastapi (>=0.116.2,<0.117.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "redis (>=6.4.0,<7.0.0)",
    "openai (>=1.107.3,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-asyncio (>=1.2.0,<2.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)"
]
