[tool.poetry]
name = "katana-cli"
version = "0.1.0"
description = "A CLI tool for managing the Katana development environment."
authors = ["Jules, AI Engineer"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.12.3"}
rich = "^13.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
